refactor(adapters): use @UtilityClass, add Locale.ROOT to search, tidy comments